packages/integration-tests/src/tests/errors/views/unhandled-rejection.undefined.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({}) %>
  <script id="scenario">
    setTimeout(function() {
      Promise.reject();
    });
  </script>
</head>
<body>
  <h1>Unhandled rejection (undefined)</h1>
  <pre id="scenarioDisplay"></pre>
  <script>scenarioDisplay.innerHTML = scenario.innerHTML;</script>
</body>
</html>
